# Gloxor

./: .clang-format  .gitignore  CMakeHax.txt  CMakeLists.txt  CMakeOptions.cmake  CMakeOptions.txt  LICENSE  README.md  TODO.md
cmake/: ClangToolchain.cmake
kernel/: CMakeLists.txt  danger.cpp  debug.hpp  main.cpp
kernel/acpi/: acpi.hpp
kernel/arch/: CMakeLists.txt
kernel/arch/x86/: CMakeLists.txt
kernel/arch/x86/bootproto/egg/: kernel_entry.asm
kernel/arch/x86/bootproto/stivale/: kernel_entry.asm  linker.ld  stivale2.cpp
kernel/arch/x86/inc/arch/: addrspace.hpp  archinfo.hpp  cpu.hpp  feature.hpp  irq.hpp  kinfo.hpp  paging.hpp  segments.hpp
kernel/arch/x86/inc/asm/: asmstubs.hpp  e9.hpp  gdt.hpp  idt.hpp  msr.hpp  paging.hpp  pic8042contr.hpp  pit8042.hpp
kernel/arch/x86/src/: cpu.cpp  paging.cpp  pic8042contr.cpp  pit8042.cpp
kernel/drivers/: CMakeLists.txt  e9.hpp  irqcontroller.cpp  irqcontroller.hpp  pic8042contr.cpp  pic8042contr.hpp  pit8042.cpp  pit8042.hpp  ps2keyboard.cpp  ps2keyboard.hpp
kernel/gloxor/: CMakeLists.txt  allocator.cpp  allocator.hpp  graphics.hpp  kinfo.hpp  modules.hpp  mutex.cpp  mutex.hpp  test.hpp  types.hpp
kernel/libarch/: CMakeLists.txt  cpu.hpp
kernel/libarch/x86/: CMakeLists.txt  cpu.cpp  idt.hpp
kernel/libarch/x86/abstract/: asmstubs.h
kernel/libarch/x86/bootproto/: CMakeLists.txt
kernel/libarch/x86/bootproto/egg/: kernel_entry.asm  linker.ld
kernel/libarch/x86/bootproto/stivale/: CMakeLists.txt  kernel_entry.asm  linker.ld  stivale2.c  stivale2.cpp  stivale2.h
kernel/libarch/x86/inc/arch/: cpu.hpp  irq.hpp  types.hpp  virtmem.hpp
kernel/libarch/x86/inc/asm/: asmstubs.hpp  gdt.hpp  idt.hpp  paging.hpp
kernel/libarch/x86/src/: cpu.cpp  cpuHelpers.asm  longjmp.asm  paging.cpp
kernel/libglox/: logger.hpp
kernel/libsane/: CMakeLists.txt  debug.hpp
kernel/libsane/graphics/: font.cpp  shell.cpp  shell.hpp
kernel/memory/: CMakeLists.txt  alloc.cpp  alloc.hpp  llallocator.hpp  pmm.cpp  pmm.hpp  virtmem.cpp  virtmem.hpp
kernel/protos/: egg.h  kernel_entry.asm  linker.ld
kernel/system/: CMakeLists.txt  danger.cpp  danger.hpp  font.cpp  logging.cpp  logging.hpp  terminal.cpp  terminal.hpp
libraries/: CMakeLists.txt
libraries/gloxor/: CMakeLists.txt  graphics.hpp  modules.hpp  types.hpp
libraries/gloxor/src/: graphics.cpp
libraries/libc/: CMakeLists.txt
libraries/libc/common/: config.h
libraries/libc/includes/: string.h  utilities.h
libraries/libc/src/: string.cpp
libraries/libglox/: CMakeLists.txt
libraries/libglox/cmake/: GloxConfig.cmake
libraries/libglox/glox/: algo.hpp  graphics.hpp  logger.hpp  pair.hpp  types.hpp  utilalgs.hpp
libraries/libglox/include/glox/: algo.hpp  alloc.hpp  array.hpp  assert.hpp  bitfields.hpp  format.hpp  glox.hpp  iterator.hpp  linkedlist.hpp  logger.hpp  macros.hpp  math.hpp  metaprog.hpp  mutex.hpp  result.hpp  string.hpp  tuple.hpp  types.hpp  util.hpp  utilalgs.hpp  vector.hpp
libraries/libglox/include/glox/detail/: movesem.hpp  moveutils.hpp  opnew.hpp
libraries/libglox/libglox/: CMakeLists.txt  README.md
libraries/libglox/libglox/cmake/: FindGlox.cmake
libraries/libglox/libglox/include/glox/: algo.hpp  array.hpp  assert.hpp  bitfields.hpp  format.hpp  glox.hpp  logger.hpp  math.hpp  mutex.hpp  new.hpp  pair.hpp  string.hpp  types.hpp  util.hpp  utilalgs.hpp
libraries/libglox/libglox/include/glox/details/: string.hpp
libraries/libglox/libglox/src/: algo.cpp
libraries/libglox/libglox/test/: CMakeLists.txt  hashTest.cpp  loggerTest.cpp
libraries/libglox/src/: graphics.cpp
libraries/libglox/test/: CMakeLists.txt  hashTest.cpp  listTest.cpp  loggerTest.cpp  miscTest.cpp  tupleTest.cpp  vectorTest.cpp
