function(glox_add_test param)
    add_executable(${param} ${param}Test.cpp)
    target_link_libraries(${param} PRIVATE libglox)
endfunction()
set(testList hash logger list vector tuple misc)
foreach(test ${testList})
    message(STATUS "Adding Test ${test}")
    glox_add_test(${test})
endforeach()
